# GameGeniusBookmarks

./: .dockerignore  .gitignore  .pylintrc  README.md  compress-screenshots.mjs  compress_image_test.py  create_env.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  redis_friendly_converter.py  requirements.txt  runonce_redis_integration.py  test_fixes.py  test_fuzzy_match.py
app/: bookmark_dir_processes.py  bookmark_matching.py  bookmarks.py  bookmarks_consts.py  bookmarks_folders.py  bookmarks_meta.py  bookmarks_print.py  bookmarks_redis.py  bookmarks_sessions.py  initial_redis_before.json  run_main_process.py  temp_initial.json  utils.py  videos.py
app/bookmarks/: __init__.py  bookmark_dir_processes.py  bookmarks.py  bookmarks_meta.py  bookmarks_print.py  finder_utils.py  finders.py  handle_create_bookmark.py  handle_matched_bookmark.py  handle_matched_bookmark_post_processing.py  handle_matched_bookmark_pre_processing.py  last_used.py  print_tree_recursive.py  process_matched_bookmark.py
app/consts/: bookmarks_consts.py  cli_consts.py
app/flag_handlers/: __init__.py  bookmark_as_base.py  find_cli_tags.py  handle_bookmark_not_found.py  handle_matched_bookmark.py  handle_matched_bookmark_name.py  handle_redis_operations.py  handle_save_redis_after_json.py  help.py  ls.py  open_video.py  preceding_bookmark.py  process_flags.py  pwd.py  run_main_process.py  save_current_redis_to_bm_before_json.py  save_obs_screenshot.py  save_redis_and_friendly_json.py  tags.py  which.py
app/obs/: handle_bookmark_obs.py  obs_utils.py  videos.py
app/tags/: bookmark_tags.py  find_cli_tags.py  tag_utils.py
app/types/: __init__.py  bookmark_types.py
app/utils/: __init__.py  bookmark_utils.py  data_utils.py  decorators.py  obs_utils.py  print_function_name_decorator.py  printing_utils.py  utils.py
obs_bookmark_saves/conv/: session_meta.json
obs_bookmark_saves/disconnect-reconnect/: folder_meta.json
obs_bookmark_saves/kerch/: session_meta.json
obs_bookmark_saves/one-offs/: folder_meta.json
obs_bookmark_saves/respawn-allies/: folder_meta.json  session_meta.json
obs_bookmark_saves/testfolder/: folder_meta.json
obs_bookmark_saves/videos/: folder_meta.json
standalone_utils/: compress_image_test.py  convert_png_to_jpeg.py  convert_video_filenames.py  rename_all_occurences_in_code.py
standalone_utils/redis/: export_from_redis.py  load_into_redis.py  load_into_redis_local.py  redis_export.py  redis_load.py
tests/: __init__.py  test_cli_flags.py  test_cli_flags.test.py  test_fixes.py  test_fixes.test.py  test_folder_detection.py  test_folder_detection.test.py  test_search.test.py  tests.md
(+497 files in other folders)
