[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-genius-bookmarks"
version = "0.1.0"
description = "Bookmark management system for game analysis"
requires-python = ">=3.8"
dependencies = [
    "obsws-python",
    "Pillow",
    "python-dotenv",
]

[tool.ruff]
select = ["E", "F", "I"]


[tool.ruff.lint.pycodestyle]
max-line-length = 700

